# AgenticAI

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  UML.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  pyproject.toml  usermanual.md
.cursor/: settings.json
.cursor/rules/: ai-agent.mdc  api-guidelines.mdc  architecture.mdc  coding-standards.mdc  langgraph.mdc  prompt-engineering.mdc  python.mdc  security.mdc  testing.mdc
.github/workflows/: ci-cd.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-stage.yml  docker.yml  lint.yml  release.yml  security.yml  tests.yml
agent-gateway/: Dockerfile  main.py  package.json  tsconfig.json
agent-gateway/src/: app.module.ts  main.ts
agent-platform/agent-registry/: pom.xml
agent-platform/orchestrator/: pom.xml
agents/: README.md  __init__.py  runner.py
agents/agent-common/: pom.xml
agents/aml-agent/: pom.xml
agents/architecture-agent/: agent.yaml
agents/architecture_agent/: __init__.py
agents/audit-agent/: pom.xml
agents/backlog-agent/: agent.yaml
agents/backlog_agent/: __init__.py
agents/billing-agent/: Dockerfile  pyproject.toml
agents/claim-agent/: pom.xml
agents/compliance-agent/: pom.xml
agents/container-agent/: Dockerfile  pyproject.toml
agents/customer-agent/: pom.xml
agents/customs-agent/: Dockerfile  pyproject.toml
agents/escalation-agent/: pom.xml
agents/executive-agent/: Dockerfile  pyproject.toml
agents/fraud-agent/: pom.xml
agents/incident-agent/: Dockerfile  pyproject.toml
agents/intent-agent/: pom.xml
agents/kyc-agent/: pom.xml
agents/loan-agent/: pom.xml
agents/logistics-agent/: Dockerfile  pyproject.toml
agents/logistics-agent/src/: agent.py  config.py  main.py
agents/logistics-agent/tests/: test_agent.py
agents/maintenance-agent/: Dockerfile  pyproject.toml
agents/notification-agent/: pom.xml
agents/order-agent/: agent.yaml
agents/order_agent/: __init__.py
agents/planning-agent/: Dockerfile  pyproject.toml
agents/portfolio-agent/: pom.xml
agents/recommendation-agent/: pom.xml
agents/safety-agent/: Dockerfile  pyproject.toml
agents/safety-agent/src/: agent.py  config.py  main.py
agents/safety-agent/tests/: test_agent.py
agents/sales-agent/: agent.yaml
agents/sales_agent/: __init__.py
agents/support-agent/: agent.yaml
agents/support_agent/: __init__.py
agents/underwriting-agent/: pom.xml
agents/vessel-agent/: Dockerfile  pyproject.toml
agents/weather-agent/: Dockerfile  pyproject.toml
ai-gateway/: README.md  pom.xml
ai-gateway/ai-gateway-common/: pom.xml
ai-gateway/model-router/: pom.xml
ai-gateway/prompt-router/: pom.xml
ai-gateway/provider-adapters/: pom.xml
ai-gateway/response-cache/: pom.xml
ai-gateway/token-manager/: pom.xml
ai-platform/ai_platform/: __init__.py  main.py
api-gateway/: Dockerfile  main.py  package.json  pom.xml
api-gateway/src/: app.module.ts  main.ts
bff/admin-bff/: pom.xml
bff/bff-common/: pom.xml
bff/customer-bff/: pom.xml
bff/employee-bff/: pom.xml
ci-cd/: README.md
ci-cd/argo-cd/: application.yaml
ci-cd/github-actions/: README.md
ci-cd/nexus/: settings.xml
ci-cd/sonarqube/: sonar-project.properties
data-platform/bigquery/: schema.sql
data-platform/cloud-storage/: buckets.yaml
data-platform/elasticsearch/: indices.yaml
data-platform/pgvector/: config.yaml
data-platform/postgres/: init.sql
data-platform/redis/: config.yaml
deployment/: docker-compose.yml  mcp-config.json
deployment/cloudrun/: Dockerfile  cloudbuild.yaml  services.yaml
deployment/github-actions/: ci-cd.yml
deployment/kubernetes/: agent-gateway.yaml  api-gateway.yaml
deployment/terraform/: main.tf  terraform.tfvars.example  variables.tf
docs/: README.md  api-reference.md  architecture.md  deployment-guide.md  frontend.md  uml-design.md  usermanual.md
docs/ADR/: 001-clean-architecture.md  002-langgraph-orchestration.md  003-event-driven-microservices.md
docs/api/: authentication.md  events.md  rest-api.md
docs/architecture/: overview.md  system-design.md
eaap_platform/: __init__.py  app_factory.py  config.py  http_client.py  logging.py  mcp_base.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
gateway/: main.py
infrastructure/: README.md
kafka/: __init__.py  client.py
mcp-servers/: README.md  package-lock.json  package.json
mcp-servers/gate-mcp/: Dockerfile  pyproject.toml
mcp-servers/gate-mcp/src/: server.py
mcp-servers/kafka-mcp/: Dockerfile  pyproject.toml
mcp-servers/kafka-mcp/src/: server.py
mcp-servers/tos-mcp/: Dockerfile  pyproject.toml
mcp-servers/tos-mcp/src/: server.py
messaging/: README.md  pom.xml
ml-platform/crane-failure-prediction/: Dockerfile  pyproject.toml
ml-platform/crane-failure-prediction/src/: main.py  model.py
observability/: README.md  pom.xml
postgres/: __init__.py  client.py  init.sql
rag/: README.md  main.py  pom.xml
rag/embedding-service/: Dockerfile  pyproject.toml
rag/embedding-service/src/: main.py  processor.py
rag/knowledge-management/: Dockerfile  pyproject.toml
rag/knowledge-management/src/: main.py  processor.py
scripts/: build-images.sh  build.ps1  deploy-docker-prod.sh  deploy-helm.sh  generate_agents.py  generate_domains.py  run-local.ps1  scaffold_agents.py  scaffold_frontends.py  scaffold_services.py  setup-jdk.ps1  start-agents.ps1  start-all.ps1  start-frontend.ps1  start-local.ps1  start-platform.ps1  stop-agents.ps1  stop-local.ps1  stop-platform.ps1
search/: README.md  pom.xml
services/order-service/: pyproject.toml
services/order-service/app/: main.py
shared/python/smart_port_common/: pyproject.toml
shared/python/smart_port_common/src/smart_port_common/: __init__.py  auth.py  config.py  health.py  kafka.py  logging.py  telemetry.py
tests/: test_platform.py
tools/: README.md  pom.xml
uml/: README.md
vector-store/: README.md
vector_store/: client.py
(+913 files in other folders)
