[project]
name = "smart-port-ai-platform"
version = "1.0.0"
description = "Multi-agent Smart Port Digital Transformation Platform"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv.workspace]
members = [
    "shared/python/smart_port_common",
    "agents/*",
    "mcp-servers/*",
    "rag/*",
    "ml-platform/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["agents", "mcp-servers", "rag", "ml-platform", "shared/python"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
