[project]
name = "gate-mcp"
version = "1.0.0"
description = "Gate and truck management"
requires-python = ">=3.11"
dependencies = [
    "smart-port-common",
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.uv.sources]
smart-port-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
