[project]
name = "crane-failure-prediction"
version = "1.0.0"
description = "ML model service: crane-failure-prediction"
requires-python = ">=3.11"
dependencies = [
    "smart-port-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "joblib>=1.4",
    "pydantic>=2.0",
]

[tool.uv.sources]
smart-port-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
