[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "order-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.21.0",
    "aiokafka>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"../../shared" = "shared"
